# com.webos.service.swupdater

./: CMakeLists.txt  README.md  delta.sh
application/: CMakeLists.txt  npm-shrinkwrap.json  package.json
application/src/: index.js
application/src/App/: App.js  App.module.less
application/src/components/: LunaAPI.js  Nav.js  Nav.less  SoftwareModule.js  SoftwareModuleList.js  SoftwareUpdate.js
application/src/views/: ControlView.js  DetailView.js  HawkBitTab.js  MainPanel.js  MainView.js  UpdateTab.js
application/webos-meta/: appinfo.json
files/launch/: swupdater.service.in
files/sysbus/: com.webos.service.swupdater.api.json  com.webos.service.swupdater.groups.json  com.webos.service.swupdater.perm.json  com.webos.service.swupdater.role.json.in  com.webos.service.swupdater.service.in
reference/libostree-sample/: CMakeLists.txt  Main.cpp
service/: CMakeLists.txt  Environment.h.in  Main.cpp  PolicyManager.cpp  PolicyManager.h  Setting.cpp  Setting.h
service/bootloader/: AbsBootloader.cpp  AbsBootloader.h  ICAS.cpp  ICAS.h  SA8155.cpp  SA8155.h  UBoot.cpp  UBoot.h
service/core/: AbsAction.h  Action.cpp  Action.h  Artifact.cpp  Artifact.h  Chunk.cpp  Chunk.h  Feedback.h  HttpCall.cpp  HttpCall.h  HttpFile.cpp  HttpFile.h  HttpRequest.cpp  HttpRequest.h  SoftwareModule.cpp  SoftwareModule.h  State.cpp  State.h  Status.cpp  Status.h
service/core/action/: AbsAction.h  CancelAction.cpp  CancelAction.h  InstallAction.cpp  InstallAction.h
service/core/cancel/: CancelAction.cpp  CancelAction.h  CancellationAction.cpp  CancellationAction.h
service/core/experimental/: Component.h  Composite.cpp  Composite.h  Leaf.cpp  Leaf.h
service/core/install/: AppSoftwareModule.cpp  AppSoftwareModule.h  ApplicationSoftwareModule.cpp  ApplicationSoftwareModule.h  Artifact.cpp  Artifact.h  DeploymentAction.cpp  DeploymentAction.h  InstallAction.cpp  InstallAction.h  OSSoftwareModule.cpp  OSSoftwareModule.h  SoftwareModule.cpp  SoftwareModule.h
service/core/install/design/: Component.h  Composite.cpp  Composite.h  Leaf.cpp  Leaf.h
service/core/install/impl/: ArtifactLeaf.cpp  ArtifactLeaf.h  DeploymentActionComposite.cpp  DeploymentActionComposite.h  SoftwareModuleComposite.cpp  SoftwareModuleComposite.h
service/hardware/: AbsHardware.cpp  AbsHardware.h  ICAS.cpp  ICAS.h
service/hawkbit/: HawkBitClient.cpp  HawkBitClient.h  HawkBitInfo.cpp  HawkBitInfo.h  HttpCall.cpp  HttpCall.h
service/interface/: IInstallable.h  IInstaller.h  ISerializable.h
service/ls2/: AppInstaller.cpp  AppInstaller.h  ConnectionManager.cpp  ConnectionManager.h  LS2Handler.cpp  LS2Handler.h  NotificationManager.cpp  NotificationManager.h  SettingsService.cpp  SettingsService.h  SystemService.cpp  SystemService.h
service/manager/: FOSSInstaller.cpp  FOSSInstaller.h  HawkBitClient.cpp  HawkBitClient.h  PolicyManager.cpp  PolicyManager.h  Setting.cpp  Setting.h
service/ostree/: OSTree.cpp  OSTree.h
service/updater/: AbsUpdater.cpp  AbsUpdater.h  FOSSInstaller.cpp  FOSSInstaller.h
service/updater/block/: BlockUpdater.cpp  BlockUpdater.h
service/updater/dd/: DDCommand.cpp  DDCommand.h
service/updater/ostree/: OSTree.cpp  OSTree.h
service/util/: Fifo.h  JValueUtil.cpp  JValueUtil.h  Logger.cpp  Logger.h  Process.h  Socket.cpp  Socket.h  Time.cpp  Time.h  Util.cpp  Util.h  glibcurl.c  glibcurl.h
src/: CMakeLists.txt  Main.cpp  README.md
src/core/: Action.cpp  Action.h  Artifact.cpp  Artifact.h  Chunk.cpp  Feedback.cpp  Feedback.h  HttpCall.cpp  HttpCall.h
src/hardware/: RPi3.cpp  RPi3.h
src/interface/: IManageable.h  ISerializable.h
src/listener/: ProgressListener.cpp  ProgressListener.h
src/manager/: Bootloader.cpp  Bootloader.h  FOSSInstaller.cpp  FOSSInstaller.h  HawkBitClient.cpp  HawkBitClient.h  HawkBitManager.cpp  HawkBitManager.h  LS2Handler.cpp  LS2Handler.h  PolicyManager.cpp  PolicyManager.h  ProgressManager.cpp  ProgressManager.h  SWUpdateManager.cpp  SWUpdateManager.h  UpdateManager.cpp  UpdateManager.h
src/util/: Fifo.cpp  HttpCall.cpp  HttpCall.h  Logger.cpp  Logger.h  Logger.hpp  Process.cpp  Socket.cpp  Socket.h  Time.cpp  Time.h  Util.cpp  Util.h
